--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/abarrera1987/tablaMultiplicar#readme",
   "dependencies": {
+    "colors": "^1.3.3",
     "yargs": "^13.2.1"
   }
 }
